<?xml version="1.0" encoding="utf-8"?>
<com.github.suzukaze.yarulistfortodoly.view.SettingsView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/transparency"
    android:orientation="vertical"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:background="@color/blue"
        >

        <LinearLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignParentTop="true"
            android:background="@color/blue"
            >

            <LinearLayout
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/pressed_color_alpha_white"
                android:orientation="horizontal"
                android:padding="8dp"
                >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_arrow_back_white_24dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    />

            </LinearLayout>

            <TextView
                android:id="@+id/settings_name"
                style="@style/ContentWhiteText"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:gravity="center"
                android:text="@string/settings"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/progress_bar_layout"
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_below="@+id/header"
            android:background="@color/blue"
            >

            <fr.castorflex.android.smoothprogressbar.SmoothProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                android:minHeight="3dp"
                android:visibility="gone"
                app:spb_color="@color/white"
                />

        </LinearLayout>

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/progress_bar_layout"
            >

            <LinearLayout
                android:id="@+id/login_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/transparency"
                android:orientation="vertical"
                >

                <EditText
                    android:id="@+id/login_id"
                    style="@style/ContentSmallText"
                    android:layout_width="200dp"
                    android:layout_height="40dp"
                    android:layout_margin="8dp"
                    android:background="@color/white"
                    android:inputType="text"
                    android:hint="@string/hint_email"
                    android:textColorHint="@color/gray"
                    />

                <EditText
                    android:id="@+id/password"
                    style="@style/ContentSmallText"
                    android:layout_width="200dp"
                    android:layout_height="40dp"
                    android:layout_margin="8dp"
                    android:background="@color/white"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword"
                    android:textColorHint="@color/gray"
                    />

                <Button
                    android:id="@+id/login"
                    style="@style/Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:background="@drawable/round"
                    android:text="@string/login"
                    />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/logout_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/transparency"
                android:orientation="vertical"
                >

                <Button
                    android:id="@+id/logout"
                    style="@style/Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:background="@drawable/round"
                    android:text="@string/logout"
                    />

            </LinearLayout>

        </FrameLayout>

    </RelativeLayout>

</com.github.suzukaze.yarulistfortodoly.view.SettingsView>
